fix class sidebar

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,10 +3,6 @@
 @tailwind utilities;
 
 @layer components {
-    .router-link-active,
-    .router-link-exact-active {
-        @apply !text-rose-800 bg-gray-50;
-    }
     .card {
         @apply my-2 w-full border-2 border-gray-200 border-dashed rounded-lg;
     }
@@ -83,4 +79,14 @@
     select {
         @apply cursor-pointer;
     }
+}
+
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
 }
