--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -37,8 +37,9 @@
     .btn-dark {
         @apply text-gray-700 hover:bg-gray-800 hover:text-white border-gray-700 focus:ring-gray-300;
     }
-    .label {
-        @apply block mb-2 text-sm font-medium text-gray-900 dark:text-white;
+    .label,
+    label {
+        @apply block mb-2 text-sm font-semibold text-gray-900 dark:text-white;
     }
     .form-input {
         @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2;
