--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -81,14 +81,36 @@
         @apply cursor-pointer;
     }
     .li-paginate {
-        @apply cursor-pointer flex items-center justify-center px-4 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-blue-600 hover:text-white;
+        @apply cursor-pointer flex items-center justify-center px-4 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-sky-800 hover:text-white;
     }
     .paginate-active {
-        @apply text-white bg-blue-600 border-2 border-blue-600;
+        @apply text-white bg-sky-800 border-2 border-sky-800;
     }
     th,
     td {
         @apply px-6 py-4;
+    }
+
+    .table-container {
+        @apply relative overflow-x-auto rounded;
+    }
+    .table {
+        @apply w-full text-sm text-left text-gray-500;
+    }
+    .thead {
+        @apply text-xs text-white uppercase bg-sky-800;
+    }
+    .tr {
+        @apply bg-white border-b;
+    }
+    .th {
+        @apply px-6 py-3;
+    }
+    .td {
+        @apply px-6 py-4;
+    }
+    .alert {
+        @apply p-4 my-4 text-sm text-yellow-800 rounded-lg bg-yellow-50;
     }
 }
 
